update mqtt docker container

--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -2,6 +2,11 @@ persistence true
 persistence_location /mosquitto/data/
 log_dest file /mosquitto/log/mosquitto.log
 listener 1883
-
+listener 9001
+protocol websockets
+# SSL/TLS Configuration
+cafile /etc/nginx/certs/fullchain.pem
+certfile /etc/nginx/certs/cert.pem
+keyfile /etc/nginx/certs/privkey.pem
 ## Authentication ##
 allow_anonymous true
